# fix_message

./: CHANGELOG.md  Cargo.toml  README.md
scripts/: id_rsa.enc  travis-doc-upload.cfg
src/: constants.rs  errors.rs  fix_message_fields.rs  generator.rs  lib.rs  parser.rs  structs.rs  traits.rs
src/parser/: mod.rs  tests.rs
tests/: lib.rs
